<resources>
    <string name="app_name">Services Test</string>

    <string name="service_text">Service</string>
    <string name="foreground_service_text">Foreground Service</string>
    <string name="intent_service_text">Intent Service</string>
    <string name="job_dispatcher_text">Job Dispatcher</string>
    <string name="job_intent_service_text">Job Intent Service</string>
    <string name="alarm_manager_text">Alarm Manager</string>
    <string name="work_manager_text">Work Manager</string>
</resources>